--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,7 @@ install:
   - conda config --add channels defaults
   - conda config --add channels bioconda
   - conda config --add channels conda-forge
-  - conda create -n atlasenv --file atlasenv.yml
+  - conda env create -n atlasenv --file atlasenv.yml
 script:
   - source activate atlasenv
   - python setup.py install
