use before_install:

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,8 +3,7 @@ language: python
 python:
   # We don't actually use the Travis Python, but this keeps it organized.
   - "3.6"
-
-install:
+before_install:
   - wget https://repo.continuum.io/miniconda/Miniconda3-latest-Linux-x86_64.sh -O miniconda.sh;
   - bash miniconda.sh -b -p $HOME/miniconda
   - export PATH="$HOME/miniconda/bin:$PATH"
@@ -17,9 +16,10 @@ install:
   - conda config --add channels bioconda
   - conda config --add channels conda-forge
   - conda env create -n atlasenv --file atlasenv.yml
-script:
+install:
   - source activate atlasenv
   - python setup.py install
   - atlas --help
   - atlas --version
+script:
   - .test/dryrun.sh
