add assembly to travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -26,11 +26,13 @@ before_install:
       conda config --add channels conda-forge
       conda env create -n atlasenv --file atlasenv.yml
     fi
-    
+
 install:
   - source activate atlasenv
   - python setup.py install
   - atlas --help
   - atlas --version
 script:
+  - N_THREADS=2 ; MEM=7
   - .test/dryrun.sh
+  - .test/test_assembly.sh --resources mem=$MEM java_mem=$MEM --jobs=$N_THREADS --restart-times=2
