--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,7 +2,7 @@ defaults: &defaults
   docker:
     - image: continuumio/miniconda3
   environment:
-    DATABASE_DIR: /databases
+    DATABASE_DIR: databases
 
 version: 2
 
@@ -30,7 +30,7 @@ jobs:
           command:  |
               if [ -d "/atlasenv" ]; then
                 echo "atlasenv exist already";
-                source activate /atlasenv
+                source activate ./atlasenv
                 conda list
               else
                 conda create -p /atlasenv --file atlasenv.yml
@@ -38,11 +38,11 @@ jobs:
       - save_cache:
           key: atlasenv-dependencies-{{ checksum "atlasenv.yml" }}
           paths:
-            - "/atlasenv"
+            - "./atlasenv"
       - run:
           name: Install atlas
           command: |
-              source activate /atlasenv
+              source activate ./atlasenv
               python setup.py install
               conda list
               atlas --help
@@ -50,20 +50,20 @@ jobs:
       - run:
           name: short test
           command: |
-              source activate /atlasenv
+              source activate ./atlasenv
               atlas --help
               atlas --version
       - run:
           name: Dryrun
           command: |
-              source activate /atlasenv
+              source activate ./atlasenv
               .test/dryrun.sh
 
       - persist_to_workspace:
-          root: /
+          root: /root/project
           paths:
             - atlasenv
-            - root/project
+            - .
 
 
   getenvs:
@@ -81,19 +81,19 @@ jobs:
       - run:
           name: Init
           command: |
-              source activate /atlasenv
+              source activate ./atlasenv
               atlas init --db-dir $DATABASE_DIR --threads 1 -w .test/Getenvs .test/reads/empty
       - run:
           name: install environements
           command: |
-              source activate /atlasenv
+              source activate ./atlasenv
               atlas run all -w .test/Getenvs --create-envs-only
       - save_cache:
           key: conda-envs-{{ checksum "conda_envs.tar"  }}
           paths:
             - $DATABASE_DIR
       - persist_to_workspace:
-          root: /
+          root: /root/project
           paths:
             - databases
 
@@ -114,7 +114,7 @@ jobs:
       - run:
           name: test assembly
           command: |
-              source activate /atlasenv
+              source activate ./atlasenv
               .test/test_assembly.sh --resources mem=$MEM java_mem=$MEM --jobs=$N_THREADS --restart-times=2
       - store_artifacts:
           path: .test/Test_assembly/reports
@@ -124,7 +124,7 @@ jobs:
       - run:
           name: run genecatalog
           command: |
-              source activate /atlasenv
+              source activate ./atlasenv
               WD='.test/Test_assembly'
               atlas run None "Genecatalog/clustering/orf2gene.tsv.gz" -w $WD --resources mem=$MEM java_mem=$MEM --jobs=$N_THREADS --restart-times=2
 
