--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -24,19 +24,19 @@ jobs:
            conda config --add channels conda-forge
            conda config --set always_yes true
       - restore_cache:
-          key: atlasenv-dependencies-{{ checksum "atlasenv.yml" }}
+          key: atlasenv-d-{{ checksum "atlasenv.yml" }}
       - run:
           name: install dependencies
           command:  |
-              if [ -d "/atlasenv" ]; then
+              if [ -d "./atlasenv" ]; then
                 echo "atlasenv exist already";
                 source activate ./atlasenv
                 conda list
               else
-                conda create -p /atlasenv --file atlasenv.yml
+                conda create -p ./atlasenv --file atlasenv.yml
               fi
       - save_cache:
-          key: atlasenv-dependencies-{{ checksum "atlasenv.yml" }}
+          key: atlasenv-d-{{ checksum "atlasenv.yml" }}
           paths:
             - "./atlasenv"
       - run:
