--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -33,7 +33,7 @@ jobs:
                 source activate ./atlasenv
                 conda list
               else
-                conda create -p ./atlasenv --file atlasenv.yml
+                conda env create -p ./atlasenv --file atlasenv.yml
               fi
       - save_cache:
           key: atlasenv-d-{{ checksum "atlasenv.yml" }}
