--- a/atlas/envs/report.yaml
+++ b/atlas/envs/report.yaml
@@ -6,9 +6,9 @@ dependencies:
     - numpy=1.13.1
     - python=3.6
     - pandas=0.20.3
-    - plotly=2.2.2
+    - plotly=3.*
     - ipython=6.2.1
     - seaborn=0.8
-    - snakemake=5.7.4
+    - snakemake =5.7.4 #or5.8.2 sheetname error
     - docutils
     - python-cufflinks
