--- a/atlas/envs/report.yaml
+++ b/atlas/envs/report.yaml
@@ -6,7 +6,7 @@ dependencies:
     - numpy=1.13.1
     - python=3.6
     - pandas=0.20.3
-    - plotly=3.*
+    - plotly
     - ipython=6.2.1
     - seaborn=0.8
     - snakemake =5.7.4 #or5.8.2 sheetname error
