--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -85,7 +85,7 @@ jobs:
                 source activate ./atlasenv
                 conda list
               else
-                wget https://repo.continuum.io/miniconda/Miniconda3-latest-Linux-x86_64.sh -O miniconda.sh;
+                curl https://repo.continuum.io/miniconda/Miniconda3-latest-Linux-x86_64.sh -o miniconda.sh;
                 bash miniconda.sh -b -p miniconda
                 export PATH="miniconda/bin:$PATH"
                 hash -r
