--- a/atlas/envs/required_packages.yaml
+++ b/atlas/envs/required_packages.yaml
@@ -3,18 +3,14 @@ channels:
     - bioconda
     - defaults
 dependencies:
-    - python=3.5
-    - bbmap=37.78
+    - python=3.6
+    - bbmap=37.*
     - pigz
-    - bzip2=1.0.6
-    - click=6.7
-    - diamond=0.9.10
-    - megahit=1.1.2
+    - bzip2=1.0.*
+#    - diamond=0.9.10
     - pandas=0.20.3
-    - picard=2.9.0
-    - pyyaml=3.12
+#    - picard=2.9.0
+#    - pyyaml=3.12
     - samtools=1.3.1
-    - spades=3.12.0
-    - sqlite=3.13.0
-    - subread=1.5.3
-    - prodigal=2.6.3
+#    - sqlite=3.13.0
+#    - subread=1.5.3
