--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -187,7 +187,7 @@ jobs:
             atlas run assembly $config -w $WD
       - save_cache:
           key: binning-{{ .Branch }}-assembly
-          path:
+          paths:
             - example_data/binning
       - run:
           name: until checkm
@@ -205,7 +205,7 @@ jobs:
             done
       - save_cache:
           key: binning-{{ .Branch }}-binning
-          path:
+          paths:
             - example_data/binning
       - run:
           name: test genomes
