--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -24,6 +24,7 @@ jobs:
            conda config --add channels bioconda
            conda config --add channels conda-forge
            conda config --set always_yes true
+           conda install -y mamba
       - restore_cache:
           key: atlasenv-d-{{ checksum "atlasenv.yml" }}
       - run:
@@ -34,7 +35,7 @@ jobs:
                 source activate ./atlasenv
                 conda list
               else
-                conda env create -p ./atlasenv --file atlasenv.yml
+                mamba env create -p ./atlasenv --file atlasenv.yml
               fi
       - save_cache:
           key: atlasenv-d-{{ checksum "atlasenv.yml" }}
@@ -75,8 +76,8 @@ jobs:
       - run: tar -cf conda_envs.tar atlas/envs
       - restore_cache:
           keys:
-            - conda-environements2-{{ checksum "conda_envs.tar"  }}
-            - conda-environements2-
+            - conda-environements-{{ checksum "conda_envs.tar"  }}
+            - conda-environements-
       - run:
           name: Init
           command: |
@@ -86,9 +87,10 @@ jobs:
           name: install environements
           command: |
               source activate ./atlasenv
+              alias conda=mamba
               atlas run all -w .test/Getenvs --create-envs-only
       - save_cache:
-          key: conda-environements2-{{ checksum "conda_envs.tar"  }}
+          key: conda-environements-{{ checksum "conda_envs.tar"  }}
           paths:
             - databases
       # - run:
@@ -129,8 +131,8 @@ jobs:
       - run: tar -cf conda_envs.tar atlas/envs
       - restore_cache:
           keys:
-            - conda-environements2-{{ checksum "conda_envs.tar"  }}
-            - conda-environements2-
+            - conda-environements-{{ checksum "conda_envs.tar"  }}
+            - conda-environements-
       - run:
           name: test assembly
           command: |
@@ -160,8 +162,8 @@ jobs:
       - run: tar -cf conda_envs.tar atlas/envs
       - restore_cache:
           keys:
-            - conda-environements2-{{ checksum "conda_envs.tar"  }}
-            - conda-environements2-
+            - conda-environements-{{ checksum "conda_envs.tar"  }}
+            - conda-environements-
       - run:
           name: test binning
           command: |
