--- a/atlas/envs/report.yaml
+++ b/atlas/envs/report.yaml
@@ -4,13 +4,13 @@ channels:
     - defaults
 dependencies:
     - numpy=1.13.1
-    - python=3.6
+    - python=3.6.10
     - pandas=0.20.3
     - plotly=2.2.2
     - ipython=6.2.1
-    - seaborn=0.8
+    - seaborn-0.8.1
     - snakemake=5.7.4 #or5.8.2 sheetname error
-    - docutils
-    - pip
+    - docutils=0.16
+    - pip=20.1.1
     - pip:
       - cufflinks==0.12.1
