--- a/atlas/envs/report.yaml
+++ b/atlas/envs/report.yaml
@@ -6,8 +6,8 @@ dependencies:
     - numpy=1.13.1
     - python=3.6
     - pandas=0.20.3
-    - plotly=2.2.2
-    - ipython=6.2.1
-    - seaborn=0.8.1
+    - plotly
+    - ipython
+    - seaborn=0.8
     - snakemake=5.7.4 #or5.8.2 sheetname error
-    - cufflinks-py=0.17.3
+    - cufflinks-py=0.13
